--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -43,7 +43,7 @@
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-          <input type="checkbox">
+          <input type="checkbox" style="margin-right: 10px;" data-id=":amenity_id" data-name=":amenity_name">
           {{ amenity.name }}
         </li>
 	      {% endfor %}
