--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="logo"></div>
-      <div> </div>
+      <div>id="api_status"</div>
     </header>
     <div class="container">
       <section class="filters">
