--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -36,24 +36,21 @@
     <title>HBnB</title>
     <style>
       #api_status {
-        text-align: right;
-        width: 50px;
-        height: 50px;
-        border-radius: 40px;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        border-right: 30px;
-        background-color: #cccccc;
+        margin-right: 30px;
+        background-color: #ccc;
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        float: right;
+        margin-top: 15px;
       }
-    </style>
+  </style>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
-      <div id="api_status" class="available"></div>
+      <div class="logo">
+        <div id="api_status" class="available"></div>
+      </div>
     </header>
     <div class="container">
       <section class="filters">
